# openwork

./: .env.dev  .gitignore  .vercelignore  AGENTS.md  ARCHITECTURE.md  DESIGN-LANGUAGE.md  INFRASTRUCTURE.md  LICENSE  MOTIVATIONS-PHILOSOPHY.md  PRODUCT.md  README.md  README_ZH.md  README_ZH_hk.md  RELEASE.md  STATS.md  STATS_V2.md  TRANSLATIONS.md  brand.clinicwork.json  brand.config.json  brand.schema.json  constants.json  opencode.jsonc  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json  vite.config.ts
.devcontainer/: Dockerfile.daytona-vnc  README.md  capture-daytona-screenshot.sh  setup-daytona-secrets-volume.sh  start-daytona-electron.sh  start-daytona-server.sh  start-daytona-vnc.sh  start-services.sh  stop-daytona-recording.sh  test-on-daytona.sh
.opencode/: package-lock.json
brand/: README.md  icon.icns
brands/: _defaults.json
changelog/: release-tracker.md
docs/: aws-eks-helm.md  azure-aks-helm.md  brand-kit.md  enterprise-mock-lab.md  enterprise-plan-gating.md  external-mcp-oauth.md  gcp-gke-helm.md  google-workspace-oauth-verification.md  marketplace-capabilities-architecture.md  mcp-ui-control-profile.md  memory-bank-architecture.md  microsoft-entra-sso-scim.md  org-install-links.md  single-org-mode-plan.md
ee/: LICENSE
evals/: README.md  browser-extension-flows.md  cloud-mcp-agent-flows.md  daytona-flows.md  (+10 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: engine.rs  misc.rs
src-tauri/src/engine/: doctor.rs
(+2026 files in other folders)
